# speaches

./: .dockerignore  .gitignore  OPENROUTER_SETUP.md  README.md  compose.yaml  download_models.sh  example_realtime_openrouter.py  model_aliases.json  pyproject.toml  test_openrouter.py  test_realtime_text_to_speech.py
src/speaches/: config.py  dependencies.py  logger.py  main.py
src/speaches/executors/: kokoro.py
src/speaches/executors/shared/: base_model_manager.py  registry.py
src/speaches/realtime/: chat_utils.py  input_audio_buffer_event_router.py  response_event_router.py
src/speaches/routers/: misc.py  models.py  speech.py  speech_embedding.py  stt.py  utils.py
